--- a/my_site/src/pages/home/partners/Partners.css
+++ b/my_site/src/pages/home/partners/Partners.css
@@ -51,8 +51,8 @@
 }
 
 .stat-box p {
-    font-size: 0.95rem;
-    color: #444;
+    font-size: 0.97rem;
+    color: #000 !important;
     line-height: 1.4;
 }
 
@@ -104,6 +104,11 @@
 
     .stat-box h3 {
         font-size: 1.8rem;
+    }
+
+    .stat-box p {
+        font-size: 0.97rem;
+        color: #000 !important;
     }
 
     .partners-right {
