--- a/my_site/src/pages/home/whyvoncross/WhyVoncross.css
+++ b/my_site/src/pages/home/whyvoncross/WhyVoncross.css
@@ -1,9 +1,9 @@
 /* WhyVonCross.css */
 
 .why-voncross {
-    background-color: #fff;
+    background-color: transparent;
     padding: 80px 20px;
-    max-width: 1400px;
+    max-width: 1200px;
     margin: 0 auto;
     text-align: center;
 }
@@ -12,7 +12,7 @@
     font-size: 2.8rem;
     margin-bottom: 50px;
     font-weight: 700;
-    color: #111;
+    color: #fff;
 }
 
  .why-grid {
